// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withData initApollo init 1`] = `
ApolloClient {
  "cache": InMemoryCache {
    "addTypename": true,
    "config": Object {
      "addTypename": true,
      "dataIdFromObject": [Function],
      "fragmentMatcher": IntrospectionFragmentMatcher {
        "isReady": false,
        "match": [Function],
      },
      "storeFactory": [Function],
    },
    "data": ObjectCache {
      "data": Object {},
    },
    "optimistic": Array [],
    "silenceBroadcast": false,
    "watches": Array [],
  },
  "defaultOptions": Object {},
  "disableNetworkFetches": false,
  "link": ApolloLink {
    "request": [Function],
  },
  "mutate": [Function],
  "query": [Function],
  "queryDeduplication": true,
  "reFetchObservableQueries": [Function],
  "resetStore": [Function],
  "ssrMode": false,
  "store": DataStore {
    "cache": InMemoryCache {
      "addTypename": true,
      "config": Object {
        "addTypename": true,
        "dataIdFromObject": [Function],
        "fragmentMatcher": IntrospectionFragmentMatcher {
          "isReady": false,
          "match": [Function],
        },
        "storeFactory": [Function],
      },
      "data": ObjectCache {
        "data": Object {},
      },
      "optimistic": Array [],
      "silenceBroadcast": false,
      "watches": Array [],
    },
  },
  "version": "2.0.4",
  "watchQuery": [Function],
}
`;

exports[`withData process.browser is false getInitialProps with cookie 1`] = `
Object {
  "cache": Object {
    "ROOT_QUERY": Object {
      "me": Object {
        "generated": false,
        "id": "User:50",
        "type": "id",
      },
    },
    "User:50": Object {
      "__typename": "User",
      "id": "50",
      "name": "hello",
    },
  },
  "value": 99,
}
`;

exports[`withData process.browser is false getInitialProps with cookie 2`] = `
<WithData(Apollo(App))
  cache={
    Object {
      "ROOT_QUERY": Object {
        "me": Object {
          "generated": false,
          "id": "User:50",
          "type": "id",
        },
      },
      "User:50": Object {
        "__typename": "User",
        "id": "50",
        "name": "hello",
      },
    }
  }
  value={99}
>
  <ApolloProvider
    client={
      ApolloClient {
        "cache": InMemoryCache {
          "addTypename": true,
          "config": Object {
            "addTypename": true,
            "dataIdFromObject": [Function],
            "fragmentMatcher": IntrospectionFragmentMatcher {
              "isReady": false,
              "match": [Function],
            },
            "storeFactory": [Function],
          },
          "data": ObjectCache {
            "data": Object {
              "ROOT_QUERY": Object {
                "me": Object {
                  "generated": false,
                  "id": "User:50",
                  "type": "id",
                },
              },
              "User:50": Object {
                "__typename": "User",
                "id": "50",
                "name": "hello",
              },
            },
          },
          "optimistic": Array [],
          "silenceBroadcast": false,
          "watches": Array [
            Object {
              "callback": [Function],
              "optimistic": true,
              "previousResult": [Function],
              "query": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": undefined,
                    "operation": "query",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "me",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "name",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "__typename",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": Array [],
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 24,
                  "source": Object {
                    "body": "query { me { id name } }",
                    "locationOffset": Object {
                      "column": 1,
                      "line": 1,
                    },
                    "name": "GraphQL request",
                  },
                  "start": 0,
                },
              },
              "variables": undefined,
            },
          ],
        },
        "defaultOptions": Object {},
        "disableNetworkFetches": true,
        "link": ApolloLink {
          "request": [Function],
        },
        "mutate": [Function],
        "query": [Function],
        "queryDeduplication": true,
        "queryManager": QueryManager {
          "dataStore": DataStore {
            "cache": InMemoryCache {
              "addTypename": true,
              "config": Object {
                "addTypename": true,
                "dataIdFromObject": [Function],
                "fragmentMatcher": IntrospectionFragmentMatcher {
                  "isReady": false,
                  "match": [Function],
                },
                "storeFactory": [Function],
              },
              "data": ObjectCache {
                "data": Object {
                  "ROOT_QUERY": Object {
                    "me": Object {
                      "generated": false,
                      "id": "User:50",
                      "type": "id",
                    },
                  },
                  "User:50": Object {
                    "__typename": "User",
                    "id": "50",
                    "name": "hello",
                  },
                },
              },
              "optimistic": Array [],
              "silenceBroadcast": false,
              "watches": Array [
                Object {
                  "callback": [Function],
                  "optimistic": true,
                  "previousResult": [Function],
                  "query": Object {
                    "definitions": Array [
                      Object {
                        "directives": Array [],
                        "kind": "OperationDefinition",
                        "name": undefined,
                        "operation": "query",
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "me",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "name",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "__typename",
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                        },
                        "variableDefinitions": Array [],
                      },
                    ],
                    "kind": "Document",
                    "loc": Object {
                      "end": 24,
                      "source": Object {
                        "body": "query { me { id name } }",
                        "locationOffset": Object {
                          "column": 1,
                          "line": 1,
                        },
                        "name": "GraphQL request",
                      },
                      "start": 0,
                    },
                  },
                  "variables": undefined,
                },
              ],
            },
          },
          "deduplicator": ApolloLink {
            "request": [Function],
          },
          "fetchQueryPromises": Map {},
          "idCounter": 3,
          "link": ApolloLink {
            "request": [Function],
          },
          "mutationStore": MutationStore {
            "store": Object {},
          },
          "onBroadcast": [Function],
          "queries": Map {
            "1" => Object {
              "cancel": [Function],
              "document": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": undefined,
                    "operation": "query",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "me",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "name",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "__typename",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": Array [],
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 24,
                  "source": Object {
                    "body": "query { me { id name } }",
                    "locationOffset": Object {
                      "column": 1,
                      "line": 1,
                    },
                    "name": "GraphQL request",
                  },
                  "start": 0,
                },
              },
              "invalidate": false,
              "invalidated": false,
              "lastRequestId": 2,
              "listeners": Array [
                [Function],
              ],
              "newData": null,
              "observableQuery": ObservableQuery {
                "_subscriber": [Function],
                "isCurrentlyPolling": false,
                "isTornDown": false,
                "lastResult": Object {
                  "data": Object {
                    "me": Object {
                      "__typename": "User",
                      "id": "50",
                      "name": "hello",
                      Symbol(id): "User:50",
                    },
                    Symbol(id): "ROOT_QUERY",
                  },
                  "loading": false,
                  "networkStatus": 7,
                  "stale": false,
                },
                "observers": Array [
                  Object {
                    "_subscription": Object {
                      "_cleanup": [Function],
                      "_observer": Object {
                        "error": [Function],
                        "next": [Function],
                      },
                    },
                  },
                ],
                "options": Object {
                  "metadata": Object {
                    "reactComponent": Object {
                      "displayName": "Apollo(App)",
                    },
                  },
                  "notifyOnNetworkStatusChange": false,
                  "query": Object {
                    "definitions": Array [
                      Object {
                        "directives": Array [],
                        "kind": "OperationDefinition",
                        "name": undefined,
                        "operation": "query",
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "me",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "name",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                          ],
                        },
                        "variableDefinitions": Array [],
                      },
                    ],
                    "kind": "Document",
                    "loc": Object {
                      "end": 24,
                      "start": 0,
                    },
                  },
                },
                "queryId": "1",
                "queryManager": [Circular],
                "scheduler": QueryScheduler {
                  "inFlightQueries": Object {},
                  "intervalQueries": Object {},
                  "pollingTimers": Object {},
                  "queryManager": [Circular],
                  "registeredQueries": Object {},
                  "ssrMode": true,
                },
                "shouldSubscribe": true,
                "subscriptionHandles": Array [],
                "variables": Object {},
              },
              "subscriptions": Array [],
            },
          },
          "queryDeduplication": true,
          "queryIdsByName": Object {},
          "queryStore": QueryStore {
            "store": Object {
              "1": Object {
                "document": Object {
                  "definitions": Array [
                    Object {
                      "directives": Array [],
                      "kind": "OperationDefinition",
                      "name": undefined,
                      "operation": "query",
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "me",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "id",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "name",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "__typename",
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "variableDefinitions": Array [],
                    },
                  ],
                  "kind": "Document",
                  "loc": Object {
                    "end": 24,
                    "source": Object {
                      "body": "query { me { id name } }",
                      "locationOffset": Object {
                        "column": 1,
                        "line": 1,
                      },
                      "name": "GraphQL request",
                    },
                    "start": 0,
                  },
                },
                "graphQLErrors": Array [],
                "metadata": Object {
                  "reactComponent": Object {
                    "displayName": "Apollo(App)",
                  },
                },
                "networkError": null,
                "networkStatus": 7,
                "previousVariables": null,
                "queryString": "{
  me {
    id
    name
    __typename
  }
}
",
                "variables": Object {},
              },
            },
          },
          "scheduler": QueryScheduler {
            "inFlightQueries": Object {},
            "intervalQueries": Object {},
            "pollingTimers": Object {},
            "queryManager": [Circular],
            "registeredQueries": Object {},
            "ssrMode": true,
          },
        },
        "reFetchObservableQueries": [Function],
        "resetStore": [Function],
        "ssrMode": true,
        "store": DataStore {
          "cache": InMemoryCache {
            "addTypename": true,
            "config": Object {
              "addTypename": true,
              "dataIdFromObject": [Function],
              "fragmentMatcher": IntrospectionFragmentMatcher {
                "isReady": false,
                "match": [Function],
              },
              "storeFactory": [Function],
            },
            "data": ObjectCache {
              "data": Object {
                "ROOT_QUERY": Object {
                  "me": Object {
                    "generated": false,
                    "id": "User:50",
                    "type": "id",
                  },
                },
                "User:50": Object {
                  "__typename": "User",
                  "id": "50",
                  "name": "hello",
                },
              },
            },
            "optimistic": Array [],
            "silenceBroadcast": false,
            "watches": Array [
              Object {
                "callback": [Function],
                "optimistic": true,
                "previousResult": [Function],
                "query": Object {
                  "definitions": Array [
                    Object {
                      "directives": Array [],
                      "kind": "OperationDefinition",
                      "name": undefined,
                      "operation": "query",
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "me",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "id",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "name",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "__typename",
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "variableDefinitions": Array [],
                    },
                  ],
                  "kind": "Document",
                  "loc": Object {
                    "end": 24,
                    "source": Object {
                      "body": "query { me { id name } }",
                      "locationOffset": Object {
                        "column": 1,
                        "line": 1,
                      },
                      "name": "GraphQL request",
                    },
                    "start": 0,
                  },
                },
                "variables": undefined,
              },
            ],
          },
        },
        "version": "2.0.4",
        "watchQuery": [Function],
      }
    }
  >
    <QueryRecyclerProvider>
      <Apollo(App)
        cache={
          Object {
            "ROOT_QUERY": Object {
              "me": Object {
                "generated": false,
                "id": "User:50",
                "type": "id",
              },
            },
            "User:50": Object {
              "__typename": "User",
              "id": "50",
              "name": "hello",
            },
          }
        }
        value={99}
      >
        <App
          cache={
            Object {
              "ROOT_QUERY": Object {
                "me": Object {
                  "generated": false,
                  "id": "User:50",
                  "type": "id",
                },
              },
              "User:50": Object {
                "__typename": "User",
                "id": "50",
                "name": "hello",
              },
            }
          }
          data={
            Object {
              "error": undefined,
              "fetchMore": [Function],
              "loading": false,
              "me": Object {
                "__typename": "User",
                "id": "50",
                "name": "hello",
                Symbol(id): "User:50",
              },
              "networkStatus": 7,
              "refetch": [Function],
              "startPolling": [Function],
              "stopPolling": [Function],
              "subscribeToMore": [Function],
              "updateQuery": [Function],
              "variables": Object {},
            }
          }
          value={99}
        >
          <div />
        </App>
      </Apollo(App)>
    </QueryRecyclerProvider>
  </ApolloProvider>
</WithData(Apollo(App))>
`;

exports[`withData process.browser is false getInitialProps without cookie 1`] = `
Object {
  "cache": Object {
    "ROOT_QUERY": Object {
      "me": Object {
        "generated": false,
        "id": "User:50",
        "type": "id",
      },
    },
    "User:50": Object {
      "__typename": "User",
      "id": "50",
      "name": "hello",
    },
  },
  "value": 99,
}
`;

exports[`withData process.browser is false getInitialProps without cookie 2`] = `
<WithData(Apollo(App))
  cache={
    Object {
      "ROOT_QUERY": Object {
        "me": Object {
          "generated": false,
          "id": "User:50",
          "type": "id",
        },
      },
      "User:50": Object {
        "__typename": "User",
        "id": "50",
        "name": "hello",
      },
    }
  }
  value={99}
>
  <ApolloProvider
    client={
      ApolloClient {
        "cache": InMemoryCache {
          "addTypename": true,
          "config": Object {
            "addTypename": true,
            "dataIdFromObject": [Function],
            "fragmentMatcher": IntrospectionFragmentMatcher {
              "isReady": false,
              "match": [Function],
            },
            "storeFactory": [Function],
          },
          "data": ObjectCache {
            "data": Object {
              "ROOT_QUERY": Object {
                "me": Object {
                  "generated": false,
                  "id": "User:50",
                  "type": "id",
                },
              },
              "User:50": Object {
                "__typename": "User",
                "id": "50",
                "name": "hello",
              },
            },
          },
          "optimistic": Array [],
          "silenceBroadcast": false,
          "watches": Array [
            Object {
              "callback": [Function],
              "optimistic": true,
              "previousResult": [Function],
              "query": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": undefined,
                    "operation": "query",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "me",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "name",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "__typename",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": Array [],
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 24,
                  "source": Object {
                    "body": "query { me { id name } }",
                    "locationOffset": Object {
                      "column": 1,
                      "line": 1,
                    },
                    "name": "GraphQL request",
                  },
                  "start": 0,
                },
              },
              "variables": undefined,
            },
          ],
        },
        "defaultOptions": Object {},
        "disableNetworkFetches": true,
        "link": ApolloLink {
          "request": [Function],
        },
        "mutate": [Function],
        "query": [Function],
        "queryDeduplication": true,
        "queryManager": QueryManager {
          "dataStore": DataStore {
            "cache": InMemoryCache {
              "addTypename": true,
              "config": Object {
                "addTypename": true,
                "dataIdFromObject": [Function],
                "fragmentMatcher": IntrospectionFragmentMatcher {
                  "isReady": false,
                  "match": [Function],
                },
                "storeFactory": [Function],
              },
              "data": ObjectCache {
                "data": Object {
                  "ROOT_QUERY": Object {
                    "me": Object {
                      "generated": false,
                      "id": "User:50",
                      "type": "id",
                    },
                  },
                  "User:50": Object {
                    "__typename": "User",
                    "id": "50",
                    "name": "hello",
                  },
                },
              },
              "optimistic": Array [],
              "silenceBroadcast": false,
              "watches": Array [
                Object {
                  "callback": [Function],
                  "optimistic": true,
                  "previousResult": [Function],
                  "query": Object {
                    "definitions": Array [
                      Object {
                        "directives": Array [],
                        "kind": "OperationDefinition",
                        "name": undefined,
                        "operation": "query",
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "me",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "name",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "__typename",
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                        },
                        "variableDefinitions": Array [],
                      },
                    ],
                    "kind": "Document",
                    "loc": Object {
                      "end": 24,
                      "source": Object {
                        "body": "query { me { id name } }",
                        "locationOffset": Object {
                          "column": 1,
                          "line": 1,
                        },
                        "name": "GraphQL request",
                      },
                      "start": 0,
                    },
                  },
                  "variables": undefined,
                },
              ],
            },
          },
          "deduplicator": ApolloLink {
            "request": [Function],
          },
          "fetchQueryPromises": Map {},
          "idCounter": 3,
          "link": ApolloLink {
            "request": [Function],
          },
          "mutationStore": MutationStore {
            "store": Object {},
          },
          "onBroadcast": [Function],
          "queries": Map {
            "1" => Object {
              "cancel": [Function],
              "document": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": undefined,
                    "operation": "query",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "me",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "name",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "__typename",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": Array [],
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 24,
                  "source": Object {
                    "body": "query { me { id name } }",
                    "locationOffset": Object {
                      "column": 1,
                      "line": 1,
                    },
                    "name": "GraphQL request",
                  },
                  "start": 0,
                },
              },
              "invalidate": false,
              "invalidated": false,
              "lastRequestId": 2,
              "listeners": Array [
                [Function],
              ],
              "newData": null,
              "observableQuery": ObservableQuery {
                "_subscriber": [Function],
                "isCurrentlyPolling": false,
                "isTornDown": false,
                "lastResult": Object {
                  "data": Object {
                    "me": Object {
                      "__typename": "User",
                      "id": "50",
                      "name": "hello",
                      Symbol(id): "User:50",
                    },
                    Symbol(id): "ROOT_QUERY",
                  },
                  "loading": false,
                  "networkStatus": 7,
                  "stale": false,
                },
                "observers": Array [
                  Object {
                    "_subscription": Object {
                      "_cleanup": [Function],
                      "_observer": Object {
                        "error": [Function],
                        "next": [Function],
                      },
                    },
                  },
                ],
                "options": Object {
                  "metadata": Object {
                    "reactComponent": Object {
                      "displayName": "Apollo(App)",
                    },
                  },
                  "notifyOnNetworkStatusChange": false,
                  "query": Object {
                    "definitions": Array [
                      Object {
                        "directives": Array [],
                        "kind": "OperationDefinition",
                        "name": undefined,
                        "operation": "query",
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "me",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "name",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                          ],
                        },
                        "variableDefinitions": Array [],
                      },
                    ],
                    "kind": "Document",
                    "loc": Object {
                      "end": 24,
                      "start": 0,
                    },
                  },
                },
                "queryId": "1",
                "queryManager": [Circular],
                "scheduler": QueryScheduler {
                  "inFlightQueries": Object {},
                  "intervalQueries": Object {},
                  "pollingTimers": Object {},
                  "queryManager": [Circular],
                  "registeredQueries": Object {},
                  "ssrMode": true,
                },
                "shouldSubscribe": true,
                "subscriptionHandles": Array [],
                "variables": Object {},
              },
              "subscriptions": Array [],
            },
          },
          "queryDeduplication": true,
          "queryIdsByName": Object {},
          "queryStore": QueryStore {
            "store": Object {
              "1": Object {
                "document": Object {
                  "definitions": Array [
                    Object {
                      "directives": Array [],
                      "kind": "OperationDefinition",
                      "name": undefined,
                      "operation": "query",
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "me",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "id",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "name",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "__typename",
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "variableDefinitions": Array [],
                    },
                  ],
                  "kind": "Document",
                  "loc": Object {
                    "end": 24,
                    "source": Object {
                      "body": "query { me { id name } }",
                      "locationOffset": Object {
                        "column": 1,
                        "line": 1,
                      },
                      "name": "GraphQL request",
                    },
                    "start": 0,
                  },
                },
                "graphQLErrors": Array [],
                "metadata": Object {
                  "reactComponent": Object {
                    "displayName": "Apollo(App)",
                  },
                },
                "networkError": null,
                "networkStatus": 7,
                "previousVariables": null,
                "queryString": "{
  me {
    id
    name
    __typename
  }
}
",
                "variables": Object {},
              },
            },
          },
          "scheduler": QueryScheduler {
            "inFlightQueries": Object {},
            "intervalQueries": Object {},
            "pollingTimers": Object {},
            "queryManager": [Circular],
            "registeredQueries": Object {},
            "ssrMode": true,
          },
        },
        "reFetchObservableQueries": [Function],
        "resetStore": [Function],
        "ssrMode": true,
        "store": DataStore {
          "cache": InMemoryCache {
            "addTypename": true,
            "config": Object {
              "addTypename": true,
              "dataIdFromObject": [Function],
              "fragmentMatcher": IntrospectionFragmentMatcher {
                "isReady": false,
                "match": [Function],
              },
              "storeFactory": [Function],
            },
            "data": ObjectCache {
              "data": Object {
                "ROOT_QUERY": Object {
                  "me": Object {
                    "generated": false,
                    "id": "User:50",
                    "type": "id",
                  },
                },
                "User:50": Object {
                  "__typename": "User",
                  "id": "50",
                  "name": "hello",
                },
              },
            },
            "optimistic": Array [],
            "silenceBroadcast": false,
            "watches": Array [
              Object {
                "callback": [Function],
                "optimistic": true,
                "previousResult": [Function],
                "query": Object {
                  "definitions": Array [
                    Object {
                      "directives": Array [],
                      "kind": "OperationDefinition",
                      "name": undefined,
                      "operation": "query",
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "me",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "id",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "name",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "__typename",
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "variableDefinitions": Array [],
                    },
                  ],
                  "kind": "Document",
                  "loc": Object {
                    "end": 24,
                    "source": Object {
                      "body": "query { me { id name } }",
                      "locationOffset": Object {
                        "column": 1,
                        "line": 1,
                      },
                      "name": "GraphQL request",
                    },
                    "start": 0,
                  },
                },
                "variables": undefined,
              },
            ],
          },
        },
        "version": "2.0.4",
        "watchQuery": [Function],
      }
    }
  >
    <QueryRecyclerProvider>
      <Apollo(App)
        cache={
          Object {
            "ROOT_QUERY": Object {
              "me": Object {
                "generated": false,
                "id": "User:50",
                "type": "id",
              },
            },
            "User:50": Object {
              "__typename": "User",
              "id": "50",
              "name": "hello",
            },
          }
        }
        value={99}
      >
        <App
          cache={
            Object {
              "ROOT_QUERY": Object {
                "me": Object {
                  "generated": false,
                  "id": "User:50",
                  "type": "id",
                },
              },
              "User:50": Object {
                "__typename": "User",
                "id": "50",
                "name": "hello",
              },
            }
          }
          data={
            Object {
              "error": undefined,
              "fetchMore": [Function],
              "loading": false,
              "me": Object {
                "__typename": "User",
                "id": "50",
                "name": "hello",
                Symbol(id): "User:50",
              },
              "networkStatus": 7,
              "refetch": [Function],
              "startPolling": [Function],
              "stopPolling": [Function],
              "subscribeToMore": [Function],
              "updateQuery": [Function],
              "variables": Object {},
            }
          }
          value={99}
        >
          <div />
        </App>
      </Apollo(App)>
    </QueryRecyclerProvider>
  </ApolloProvider>
</WithData(Apollo(App))>
`;

exports[`withData process.browser is false when no getInitialProps 1`] = `
Object {
  "cache": Object {
    "ROOT_QUERY": Object {
      "me": Object {
        "generated": false,
        "id": "User:50",
        "type": "id",
      },
    },
    "User:50": Object {
      "__typename": "User",
      "id": "50",
      "name": "hello",
    },
  },
}
`;

exports[`withData process.browser is false when throw error 1`] = `
Object {
  "value": 99,
}
`;

exports[`withData process.browser is true getInitialProps 1`] = `
Object {
  "value": 99,
}
`;

exports[`withData process.browser is true getInitialProps 2`] = `
Object {
  "value": 99,
}
`;

exports[`withData process.browser is true has not websocket 1`] = `
Object {
  "value": 99,
}
`;
